packages/react-components/src/components/table/table-head-cell/table-head-cell.module.css
@import '../../../core/utils/media.css';

@layer components {
  .TableHeadcell {
    --indent-guide-width: 24px;

    position: relative;
    margin: 0;
    max-width: var(--width);
    font-variant-numeric: tabular-nums;
    line-height: token(--font-lh-small);
    text-align: start;
    padding: 0;
    word-wrap: break-word;
    color: var(--global-foreground);
    font-weight: token(--font-weight-bold);

    &:not(:only-child) {
      text-align: var(--text-align, start);
    }

    &[data-table-cell-fixed='true'] {
      width: var(--width, 1%);
    }

    &[data-table-cell-collapsed='true'] {
      width: 1e-10%;
    }

    &[data-table-cell-padding='true'] {
      padding: calc(token(--space-4) + token(--space-2)) token(--space-8);

      @media (--from-small) {
        padding: calc(token(--space-8) + token(--space-4)) token(--space-16);
      }
    }
  }

  .Icon {
    margin-inline-start: token(--space-8);
  }

  .BlankButton {
    align-items: center;
    justify-content: flex-start;
    text-align: var(--text-align, start);
    font-weight: token(--font-weight-bold);
  }
}
@layer overrides {
  .TableCell *[data-button-kind] {
    backdrop-filter: none;
  }
}

